--- a/ckanext/sparql/templates/ckanext/sparql/index.html
+++ b/ckanext/sparql/templates/ckanext/sparql/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="{% url_for_static '/public_sparql/codemirror/themes/default.css' %}">
     
 {% endblock %}
-
+{% block subtitle %}SPARQL{% endblock %}
 {% block breadcrumb_content %}
 
   <li class="active">{{ _('Sparql Point') }}</li>
@@ -31,7 +31,11 @@
 {% endblock %}
 
 {% block primary %}
-
+<style type="text/css">
+#content > div.row.row1 {
+    min-height: 300px;
+}
+</style>
     <header class="sparql_hideme">
     <p>{{ _('Sparql EndPoint Interface.') }}</p>
   </header>
@@ -51,9 +55,10 @@
         {% endif %}>
           <label class="control-label" for="field-sparql-server">{{ _('Sparql Point Server') }}</label>
             <div class="controls">
+               
                 <input id="field-sparql-server" type="text" name="sparql-server" value="{{h.sparql_endpoint_url()}}" placeholder="{{ _('Add the Sparql service URL. For Instance:') }} {{h.sparql_endpoint_url()}}">
             </div>
-            <i class="icon-exclamation-sign"></i>&nbsp;<small>{{ _('Add the Sparql service URL. For Instance:') }} <abbr title="Sparql Point"><a target="_blank" href="http://semantic.ckan.net/sparql">http://semantic.ckan.net/sparql</a></abbr></small>
+            <i class="icon-exclamation-sign"></i>&nbsp;<small>{{ _('Actually there is no data in triple store') }}</small>
         </div>
         
     <i class="icon-comment"></i><small><abbr title="Code Mirror"><a target="_blank" href="http://codemirror.net/">&nbsp;{{ _('Created using Code Mirror for the interface') }}</a></abbr></small>
@@ -61,7 +66,7 @@
     <!-- QUERY BUILDER TEST-->
 
 
-
+<label for="generated_query" style="display: none;">...</label>
 <textarea id="generated_query" style="display:none">
 
 </textarea>
@@ -71,7 +76,7 @@
     <br><br>
 
     <div id="test_sparql" class="sparql_hideme"></div>
-
+<label for="sparql_code" style="display:none;"> ...</label>
 <textarea id="sparql_code" name="sparql_code"  resize="both">
 #Add here other prefixes for vocabularies that are needed
 #PREFIX othervocab: <http://...... 
@@ -90,16 +95,19 @@ LIMIT 20
             
             <i class="icon-info-sign"></i>&nbsp;<small><abbr title="Link Query"><a target="_blank" id="go_to_link_query_json">{{ _('JSON Format') }}<i class="icon-link"></i></a></abbr><b>&nbsp;&nbsp;({{ _('You can copy the permanent link below') }})</b></small><br>
             <div class="controls">
+              <label for="field-link-sparql-server-query_json" style="display: none;">...</label>
                 <input id="field-link-sparql-server-query_json" type="text" name="sparql-server-query" value="" placeholder="">
             </div>
             
             <i class="icon-info-sign"></i>&nbsp;<small><abbr title="Link Query"><a target="_blank" id="go_to_link_query_turtle">{{ _('TURTLE Format') }}<i class="icon-link"></i></a></abbr><b>&nbsp;&nbsp;({{ _('You can copy the permanent link below') }})</b></small><br>
             <div class="controls">
+              <label for="field-link-sparql-server-query_turtle" style="display: none;">...</label>
                 <input id="field-link-sparql-server-query_turtle" type="text" name="sparql-server-query" value="" placeholder="">
             </div>
             
             <i class="icon-info-sign"></i>&nbsp;<small><abbr title="Link Query"><a target="_blank" id="go_to_link_query_csv">{{ _('CSV Format') }}<i class="icon-link"></i></a></abbr><b>&nbsp;&nbsp;({{ _('You can copy the permanent link below') }})</b></small><br>
             <div class="controls">
+               <label for="field-link-sparql-server-query_csv" style="display: none;">...</label>
                 <input id="field-link-sparql-server-query_csv" type="text" name="sparql-server-query" value="" placeholder="">
             </div>
             
