--- a/ckanext/sparql/templates/ckanext/sparql/index.html
+++ b/ckanext/sparql/templates/ckanext/sparql/index.html
@@ -66,17 +66,15 @@
     <!-- QUERY BUILDER TEST-->
 
 
-<label for="generated_query" style="display: none;">...</label>
-<textarea id="generated_query" style="display:none">
-
-</textarea>
+<label for="generated_query" style="display:none;">...</label>
+<textarea id="generated_query" style="display:none"></textarea>
 </div>
 
     <!-- QUERY BUILDER TEST-->
     <br><br>
 
     <div id="test_sparql" class="sparql_hideme"></div>
-<label for="sparql_code" style="display:none;"> ...</label>
+<label for="sparql_code" >{{_('Sparql query')}}</label>
 <textarea id="sparql_code" name="sparql_code"  resize="both">
 #Add here other prefixes for vocabularies that are needed
 #PREFIX othervocab: <http://...... 
