--- a/ckanext/sparql/templates/ckanext/sparql/index.html
+++ b/ckanext/sparql/templates/ckanext/sparql/index.html
@@ -198,7 +198,7 @@ LIMIT 20
   <link rel="stylesheet" href="/recline/timeline.css">
 
 
- <script src="/recline/jquery-1.7.min.js"></script>
+ <!--script src="/recline/jquery-1.7.min.js"></script!-->
   <script type="text/javascript" src="/recline/underscore.js"></script>
   <script type="text/javascript" src="/recline/backbone.js"></script>
   <script type="text/javascript" src="/recline/mustache.js"></script>
